# ev3ML

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
conf/: README.md
conf/base/: catalog.yml
dags/: ml_pipeline_master.py
data/: 01_raw.dvc  06_models.dvc  07_model_output.dvc
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  unsupervised_analysis.md
notebooks/: 05_unsupervised_learning.ipynb  06_final_analysis.ipynb
src/evaluacion_2_mlops/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/evaluacion_2_mlops/nodes/: modeling.py  preprocessing.py
src/evaluacion_2_mlops/pipelines/: classification_pipeline.py  data_processing_pipeline.py  integration_pipeline.py  regression_pipeline.py
src/evaluacion_2_mlops/pipelines/unsupervised_learning/: nodes.py  pipeline.py
