[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "evaluacion_2_mlops"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.0.0",
    "pandas>=1.5",
    "scikit-learn>=1.0",
    "pyarrow>=12.0",
    "kedro-datasets[pandas,pickle,json]>=1.8",
]

[project.scripts]
evaluacion-2-mlops = "evaluacion_2_mlops.__main__:main"

[tool.kedro]
package_name = "evaluacion_2_mlops"
project_name = "evaluacion_2_mlops"
kedro_init_version = "1.0.0"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "evaluacion_2_mlops.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "d3cdf096d9ac4b228576624069bbdd65"
